objects/LAT_FormBuilderEntries__c.object
<CustomObject>
    <fields>
        <fullName>Fields_Populated__c</fullName>
        <label>Fields Populated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Builder_Schema__c</fullName>
        <label>Form Builder Schema</label>
        <referenceTo>LAT_FormBuilderSchema__c</referenceTo>
        <relationshipLabel>LAT Form Builder Entries</relationshipLabel>
        <relationshipName>Form_Builder_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_IcrmExternalId__c</fullName>
        <defaultValue>$User.Id+TEXT(NOW())</defaultValue>
        <externalId>true</externalId>
        <label>Icrm External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jsonData__c</fullName>
        <label>JSON data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>LAT Form Builder Entry</label>
    <nameField>
        <displayFormat>ENT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT Form Builder Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>